Feat: Minimal Play Complete

--- a/index.html
+++ b/index.html
@@ -1,17 +1,73 @@
-<<!DOCTYPE html>
-    <html lang="en">
+<!DOCTYPE html>
+<html lang="en">
 
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title></title>
-        <link href="css/style.css" rel="stylesheet">
-    </head>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="css/style.css" rel="stylesheet">
+    <script src="modules/main.js" type="module"></script>
+    <link rel="icon" type="image/x-icon" href="resources/icons8-tic-tac-toe-50.png">
+    <title>Tik Tac Toe</title>
+</head>
 
+<body>
+    <dialog class="player-selection">
+        <form id="player-form" method="dialog">
+            <h1>Select Marks</h1>
 
+            <div class="main-div">
+                <div class="player1">
+                    <div class="name-section">
+                        <input id="player1-name" placeholder=" " type="text" name="player1" required>
+                        <label for="player1-name">Player 1</label>
+                    </div>
+                    <div class="marks-container">
+                        <div class="radio-group">
+                            <input type="radio" id="cross1" name="player1-mark" value="X" checked>
+                            <label for="cross1">X</label>
+                            <input type="radio" id="zero1" name="player1-mark" value="O">
+                            <label for="zero1">O</label>
+                        </div>
+                    </div>
+                </div>
 
-    <body>
+                <div class="player2">
+                    <div class="name-section">
+                        <input type="text" id="player2-name" placeholder=" " name="player2" required>
+                        <label for="player2-name">Player 2</label>
+                    </div>
 
-    </body>
+                    <div class="marks-container">
+                        <div class="radio-group">
+                            <input type="radio" id="cross2" name="player2-mark" value="X">
+                            <label for="cross2">X</label>
+                            <input type="radio" id="zero2" name="player2-mark" value="O" checked>
+                            <label for="zero2">O</label>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <button class="start-game" type="submit">Start</button>
+        </form>
+    </dialog>
 
-    </html>
+    <!-- Actual Canva -->
+    <h1 class="title">Tik Tac Toe</h1>
+    <section class="main-wrapper">
+        <div class="player1-info">
+            <p class="player1-name"></p>
+            <p class="player1-mark"></p>
+            <p class="player1-wins"></p>
+        </div>
+        <div class="grid-container">
+        </div>
+        <div class="player2-info">
+            <p class="player2-name"></p>
+            <p class="player2-mark"></p>
+            <p class="player2-wins"></p>
+        </div>
+    </section>
+
+</body>
+
+</html>
