Feat: works fine now

--- a/index.html
+++ b/index.html
@@ -68,6 +68,10 @@
         </div>
     </section>
 
+    <dialog class="winner-dialog">
+        <p class="winner"></p>
+    </dialog>
+
 </body>
 
 </html>
